--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,14 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.error {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  width: 300;
+  font-size: 30px;
+  border: 2px solid rgba(199, 44, 44, 0.5);
+  border-radius: 4px;
+  background-color: ivory;
+}
